[project]
name = "reportlib-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor11001",email = "83318136+vitor11001@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "reportlab (>=4.4.1,<5.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

